--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                             <h1 class="display-5 mb-0">Contact Us For Any Queries!</h1>
                         </div>
                         <div class="col-md-6 col-lg-7">
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="">Download Now</a>.</p>
+                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             <form>
                                 <input type="text" class="w-100 form-control p-3 mb-4 border-primary bg-white" placeholder="Your Name">
                                 <input type="email" class="w-100 form-control p-3 mb-4 border-primary bg-white" placeholder="Enter Your Email">
